Fixed tag column/row spacing on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -172,6 +172,11 @@
     left: 0;
     padding: 12px;
     z-index: 1;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 6px;
+    column-gap: 8px;
 }
 
 .project__button {
